@@ -4,3 +4,8 @@
 -Dmaven.compiler.release=17
 -Dmaven.compiler.compilerVersion=17
 -Dfile.encoding=UTF-8
+-Dmaven.compiler.debug=true
+-Dmaven.compiler.debuglevel=lines,vars,source
+--illegal-access=permit
+-Dmaven.compiler.executable=javac
+-Dmaven.compiler.fork=true
